# vericert-backend

./: Procfile  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 21821fe28b4b_update_asset_is_duplicate.py  25d96a04f06a_add_stuff_to_package_table.py  280338cf4489_create_user_table.py  54d6f4259f38_remove_name_from_client.py  62103ad0066d_create_application_tables.py  86e72dd70c1a_add_offers_to_package_table.py  882dc8e97b5b_update_document_nft_ipfs_asset_id.py  8c85cd2abf66_update_document_asset_id.py  cdbe5521a3ed_update_ipfs_asset_timestamp.py  debab4b486d7_add_auth_token_table.py
veecert_backend/: main.py
veecert_backend/apps/assets/: models.py  utils.py
veecert_backend/apps/assets/graphql/: mutations.py  query.py
veecert_backend/apps/assets/graphql/types/: enums.py  inputs.py  outputs.py
veecert_backend/apps/assets/managers/: document.py  ipfs_asset.py
veecert_backend/apps/common/: contract.py  smart_contract_client.py
veecert_backend/apps/common/graphql/: inputs.py  scalars.py
veecert_backend/apps/common/utils/: nft_card.py
veecert_backend/apps/users/: models.py
veecert_backend/apps/users/graphql/: mutations.py  quereis.py
veecert_backend/apps/users/graphql/types/: inputs.py  outputs.py
veecert_backend/apps/users/managers/: auth_token.py  client.py  client_package.py  package.py  user.py
veecert_backend/config/: context.py  database.py  schema.py  settings.py
veecert_backend/constants/: table_names.py  urls.py
